--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^15.4.2",
+    "react-background-image-loader": "0.0.1",
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0",
     "smoothscroll": "^0.3.0"
