--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^15.4.2",
     "react-background-image-loader": "0.0.1",
     "react-dom": "^15.4.2",
+    "react-responsive": "^1.3.0",
     "react-router": "^4.0.0",
     "smoothscroll": "^0.3.0"
   },
